--- a/user_study_docs/obsidian-user-studies.tex
+++ b/user_study_docs/obsidian-user-studies.tex
@@ -31,7 +31,7 @@
 \else\makeatother
 %% Conference information (used by SIGPLAN proceedings format)
 %% Supplied to authors by publisher for camera-ready submission
-\acmConference[PL'17]{ACM SIGPLAN Conference on Programming Languages}{January 01--03, 2017}{New York, NY, USA}
+\acmConference[PLATEAU'17]{8th Workshop on Evaluation and Usability of Programming Languages and Tools}{October 23, 2017}{Vancouver, BC, Canada}
 \acmYear{2017}
 \acmISBN{978-x-xxxx-xxxx-x/YY/MM}
 \acmDOI{10.1145/nnnnnnn.nnnnnnn}
@@ -198,20 +198,19 @@ as our preliminary findings.
 We are designing a blockchain-based programming language called Obsidian \cite{Coblenz} with the goal of 
 minimizing the risk of common security vulnerabilities in blockchain programs. Blockchain
 programs written with current domain-specific languages such as Solidity \cite{Solidity} often contain
-exploitable bugs. In a particularly calamitious example, \$50 million was stolen from a contract on the 
-Ethereum blockchain called the DAO \cite{Sirer}. Obsidian contains several core features
+exploitable bugs. In a particularly calamitious example, \$50 million was stolen from a contract, called \textit{The DAO},  on the 
+Ethereum blockchain \cite{Sirer}. Obsidian contains core features
  -- namely, first-class typestate and linear resources -- that will allow users 
 to write programs safely and effectively. The target 
 userbase of Obsidian is business professionals who will use the language to write smart contracts, 
-and its design is thus oriented towards this domain: Obsidian programs consist of contracts --
+and its design is thus oriented towards this domain. Obsidian programs consist of contracts --
 similar in function to classes in Java -- which contain fields, states, and transactions -- similar in
 function to methods.
 
 \subsection{Typestate}
 
-The DAO hack was accomplished using a reentrant function call. States have the ability to 
-prohibit malicious reentrant calls by ensuring that external code is only invoked in a safe state. 
-In light of this, Obsidian makes state first class: an object in Obsidian has a mutable state that restricts which 
+We (as well as other researchers) have observed that programs in the domains of focus for blockchain platforms are typically state-oriented \cite{State}. Furthermore, the DAO exploit stemmed from invoking a function in an external contract while the calling contract was in an inconsistent state.
+In light of this, Obsidian makes state first-class: an object in Obsidian has a mutable state that restricts which 
 transactions can be invoked on it \cite{Aldrich}. The states of a contract are defined as explicit blocks containing 
 transactions and fields, which can only be accessed if the contract is in the corresponding state. 
 
@@ -241,9 +240,9 @@ The \texttt{\small{->}} operator indicates a state transition.
 \subsection{Linear Resources}
 
 Blockchain programs may manage some kind of resource, like a cryptocurrency, or a token 
-indicating a more complicated right (e.g. ownership of a financial option). The static semantics for linear resources \cite{Wadler} 
+indicating a more complicated right (e.g. ownership of a financial option). Linear types \cite{Wadler} are an existing approach that allow the compiler to
 enforce a safe, clean programming model: resources cannot be used more than once, but must be 
-used before leaving the current scope (thus ensuring that a resource is not lost accidentally). 
+used before leaving the current scope (thus ensuring that a resource is not lost accidentally). However, linear types have seen limited adoption in popular programming languages (though Rust uses a form of linearity for alias control \cite{Rust}) . In this work, we are using user studies to evaluate possible user-facing approaches to integrating linear types into our design with the hope that users will be able to use them effectively and with little training.
 
 \begin{lstlisting}[caption={Linear resources in Obsidian},captionpos=b]
 contract Treasury {
@@ -263,21 +262,21 @@ contract Treasury {
 }
 \end{lstlisting}
 
-Obsidian also supports path-dependent types \cite{Amin}, wherein values can have type members. In the 
+Suppose each Treasury mints its own kind of money. If money \textit{m1} from treasury {t1} is used with a distinct treasury \textit{t2}, we would like the compiler to give an error message. Obsidian supports this via the inclusion of path-dependent types \cite{Amin}, wherein values can have type members. In the 
 above example, the type of Money is dependent upon a specific value of Treasury; put another way, 
 each Treasury \texttt{\small{t}} has its own type \texttt{\small{t.Money}}. 
 
 Path-dependent types assist in writing secure contracts: without such types, every instance of 
 Treasury would share the same Money type, and the programmer would have to manually check 
-that all money deposited into a treasury -- for example -- is of the correct type. Incorrect or insufficient 
+that all money deposited into a treasury (for example) is of the correct type. Incorrect or insufficient 
 checks could leave contracts vulnerable to exploitation. With path-dependent types, all such checks 
 are automatic: we can ensure that only money that comes from a specific treasury is used in 
 transactions within that treasury. 
 
 \subsection{Usability}
-It is crucial that our language is usable -- that is, real programmers are able to write correct Obsidian 
+It is crucial that real programmers are able to write \textit{correct} Obsidian 
 code easily and efficiently. However, even with seemingly intuitive features, it is not always clear 
-which approach to design is most effective for programmers. For instance, consider the following simple 
+which design is most effective for programmers. For instance, consider the following simple 
 Obsidian contract:
 
 \begin{lstlisting}
@@ -305,11 +304,11 @@ In transaction \texttt{\small{a}}, we transition to state \texttt{\small{S1}} an
 However, does it make sense to call \texttt{\small{b(x1)}} after the transition? While we have just 
 transitioned to \texttt{\small{S1}}, lexically we are still in the 
 Start state, and it is not immediately apparent which variables and transactions are in scope. 
-Obviously this example is extremely simple, but in a program with many different contracts, 
+In a nontrivial program with many different contracts, 
 transactions, and states, a situation like this could cause serious confusion. Failure to encode state 
 machines properly has been shown to be a significant source of errors in smart-contract 
 programming \cite{Delmolino}. It is critical that users are able to understand and use states easily and 
-effectively -- if not, there is potential to create the same or worse security weaknesses as in a 
+effectively -- if not, there is potential to create the same or worse bugs, including, security weaknesses, as in a 
 language without states. 
 
 Similar questions of usability arise with path-dependent types. An initial approach we have taken is 
@@ -321,8 +320,7 @@ presence and utility of path dependency.
 these logical, sensible solutions to real problems that programmers face? If people do not 
 understand or choose to use the language's core features, then any of the potential benefits 
 of those features are lost. 
-	We are conducting a user study \cite{Myers} to investigate these questions of usability in Obsidian. The 
-key research questions we address in the study are as follows: 
+	We are conducting a user study to investigate these questions of usability in Obsidian, consistent with prior work that showed the applicability of human-computer interaction techniques to programming tools \cite{Myers}. One aspect is the \textit{natural programming} approach, in which we ask participants how they would like to express their solutions to programming problems \cite{Natural}. The key research questions we address in the study are as follows: 
 \begin{itemize}
 \item Are states and path-dependent types a natural way of 
 	approaching the challenges that arise in blockchain programming?
@@ -338,44 +336,44 @@ are implemented in Obsidian?
 This study was exploratory rather than evaluative: its purpose was to give us information about the usability of state transitions 
 and path-dependent types so we can make informed choices about the design of our language. 
 We chose these two features as the focus of our study because they are both important safety features 
-that we expect users will use frequently. In addition, they both have several distinct options for for their syntactic representation, and the results of the study will factor into which option we choose to implement.  
+that we expect users will use frequently. In addition, they both have several distinct options for their syntactic representation, and the results of the study will factor into which design we choose to implement.  
 
 Participants were asked to complete two programming exercises, both of which were divided into parts that 
 gradually introduced the participant to Obsidian and its core features. 
-Participants were instructed to think aloud throughout the exercise, and were permitted to ask questions.
+Participants were instructed to think aloud throughout the exercise, and were permitted to ask questions. We designed the study so that the whole study could be completed in approximately an hour and a half in order to make it easier for us to find willing participants as well as to limit participant fatigue. We obtained IRB approval for the study; we obtained informed consent from participants and we paid participants \$10/hour for their time.
 
 \subsection{Voter Registration Exercise}
 
-Participants were offered a description of a voter registration system for a hypothetical democratic nation. The 
+Participants were given a description of a voter registration system for a hypothetical democratic nation. The 
 system had certain stipulations that made a state machine a logical means of representing its required behaviors. 
-For instance, the system had specific conditions under which a citizen either became registered to vote, 
+For instance, the system had specific conditions under which a citizen either became registered to vote 
 or remained unregistered. 
 
-The exercise was divided into five parts. In part one, participants were asked to implement the system using 
+The exercise was divided into five parts. In part \textbf{one}, participants were asked to implement the system using 
 pseudocode. They were encouraged to invent any language features that they wanted in order to solve this 
-problem. Our goal was to see how people naturally solve a problem in this domain \cite{Myers}: what ideas do they 
+problem. Our goal was to see how people naturally solve a problem in this domain: what ideas do they 
 have, and what assumptions do they make? 
 	
-In part two, participants were offered a state diagram that modeled the voter registration system, and were asked to 
+In part \textbf{two}, participants were given a state diagram that modeled the voter registration system, and were asked to 
 modify their pseudocode to include the states and state transitions shown in the diagram. Again, we wanted to 
 observe people's natural ideas about how to represent states and state transitions in a program.
 
-In part three, participants were offered a two-page Obsidian tutorial detailing the key components of the language. 
+In part \textbf{three}, participants were given a two-page Obsidian tutorial detailing the key components of the language. 
 The tutorial explained how state blocks work, but did not give any information about how transitions should be 
 written. Participants were then given an Obsidian program that implemented the voter registration system, but was 
 missing state transitions. Participants were asked to add state transitions to the code, inventing the syntax 
 themselves.
 
-In part four, participants were shown three options for the syntax and functionality of state transitions, each 
+In part \textbf{four}, participants were shown three options for the syntax and functionality of state transitions, each 
 accompanied by a short code example. Participants were presented the options in a random order; the order given 
 here is arbitrary.
 
-In option 1, users are allowed to use any transaction in any state, given they have already transitioned to that 
-state. For instance, in Figure 3, it is legal to use the \texttt{\small{toS2}} transaction inside the \texttt{\small{Start}} 
+In option 1, shown in Fig. \ref{transitions}, users were allowed to use any transaction available in the current \textit{dynamic} state regardless of the lexical context. For instance, it is legal to use the \texttt{\small{toS2}} transaction (on line 5) inside the \texttt{\small{Start}} 
 state, even though that transaction is defined within \texttt{\small{S1}}. This is because there is a transition to 
 \texttt{\small{S1}} in the previous line.
 
-\begin{lstlisting}[caption={One option for state transitions},captionpos=b]
+
+\begin{lstlisting}[caption={Option 1 for state transitions},captionpos=b, label=transitions, numbers=left, xleftmargin=.5cm]
 contract C {
    state Start {
        transaction t(int x) {
@@ -398,28 +396,28 @@ contract C {
 }
 \end{lstlisting}
 
-In option 2, each state has a constructor that is invoked when the user transitions to that state. With this
-option, there cannot be any code following a state transition; thus a transition must thus be the final line of a 
-transaction. In option 3, there are conditional \texttt{\small{if in \{state\}}} blocks which allow the user
-to use the transactions and fields of that state while lexically in a different state. 
+In option 2, each state had a constructor that was invoked when the contract transitions to that state. With this
+option, there could not be any code following a state transition; thus a transition must thus be the final line of a 
+transaction. In option 3, there were conditional \texttt{\small{if in \{state\}}} blocks, which allowed the user
+to lexically nest states so that another state's transactions and fields could be used directly. 
 
 Participants were asked to complete a short Obsidian contract once for each option. The contract was 
 designed to be a simple yet non-trivial use of state transitions that illustrates the benefits and drawbacks of each 
 option. The goal of this part was to see whether they would be able able to implement the 
 contract successfully with each option, as well as to gather feedback about which option they preferred and why.
 
-In part five, participants were asked to pick one of the three options for state transitions and use it to complete 
+In part \textbf{five}, participants were asked to pick one of the three options for state transitions and use it to complete 
 the Obsidian program from part three. They were then asked to explain their reasoning and elaborate on if 
 there was anything confusing about any of the options. 
 
 \subsection{Lottery Ticket Exercise}
 	
-Participants were offered a description of a program that allows users to create and participate in lotteries. Every 
-lottery sells lottery tickets, but a user should only be able to redeem a winning ticket from the lottery where they 
-bought it -- thus motivating the use of path-dependent types. 
+Participants were given a description of a program that allowed users to create and participate in lotteries. Every 
+lottery sold lottery tickets, but a user should only be able to redeem a winning ticket from the lottery from which it was purchased
+ -- thus motivating the use of path-dependent types. 
 
 The exercise was divided into two parts. Part one mirrored the voter registration exercise in that participants were 
-asked to implement this program using pseudocode. Again, we wanted to see how people naturally go about 
+asked to implement the program using pseudocode. Again, we wanted to see how people naturally go about 
 solving this problem. Would using path-dependent types -- or some feature similar to that -- occur to anyone?
 	
 In part two, participants were given an explanation of path-dependent types and offered an Obsidian contract that 
@@ -429,10 +427,10 @@ correct code using them after only a brief introduction.
 
 \section{Discussion of Study Design}
 
-An important part of designing the user study was ensuring that the programming exercises had an appropriate level of difficulty. The 
-scenarios had to be simple enough that participants could comprehend and implement them in the little time they have; however, 
+One challenge in designing the user study was ensuring that the programming exercises had an appropriate level of difficulty. The 
+scenarios had to be simple enough that participants could comprehend and implement them in the little time they had; however, 
 they also had to be complex enough that implementing them was a non-trivial problem that actually motivated the use of 
-Obsidian's features. Our first several pilot studies revealed that the design of our exercises was too complicated, and 
+Obsidian's features. Our first several pilot studies revealed that our exercises were too complicated, and 
 participants took much longer to read and understand the instructions than we had anticipated. Additionally, there were parts 
 of the exercises that people were continually confused about, which made it difficult to assess their ability to use the language. 
 
@@ -450,13 +448,11 @@ complex, participants' opinions may have been based only on a cursory understand
 for state transitions, for instance, whose utility only becomes apparent in a large, complicated contract. 
 Testing these issues is left for future work.
 
-\section{Preliminary Findings}
+\section{Preliminary Results}
 
-We used a convenience sample of 12 participants. They had varying levels of programming experience: some were beginners, some 
-experts. None had any knowledge about Obsidian prior to completing the study. The majority of the participants were undergraduates 
-studying computer science, though one was a computer science Ph.D student, and two were working in a business-related fields. Most 
-participants only completed one of the two exercises, and some only completed several parts of one exercise due to time constraints. The 
-exercises were revised and modified across the 12 pilots we did, though the central objectives remained consistent. 
+We recruited a convenience sample of 12 participants. They had varying levels of programming experience: some were beginners, some 
+experts. None had any knowledge about Obsidian prior to completing the study. Nine of the participants were undergraduates 
+studying computer science; one was a computer science Ph.D student, and two were working in a business-related fields. Since this was an exploratory study, we revised the study materials after each participant according to what we learned about the materials or the language design choices, and we asked participants to complete either one or both exercises according to our experimental design needs and the participants' time constraints. Some participants only completed several parts of one exercise due to time constraints. 
 
 \subsection{Voter Registration Exercise}
 
@@ -467,18 +463,18 @@ participants created separate lists for registered and unregistered citizens, me
 appear on both lists. 
  	
 Six out of these seven participants were shown a state diagram and asked to modify their pseudocode to use states. Of these six 
-participants, two created explicit state blocks with functions and variables inside. The rest either maintained a global state variable that 
-changed based on the status of a citizen, gave each citizen a state field that changed based on their status (e.g. with syntax such as 
+participants, two created explicit state blocks with functions and variables inside, similar to the design of Obsidian. The rest either maintained a global state variable that 
+changed based on the status of a citizen, gave each citizen a state field that changed based on the citizen's status (e.g. with syntax such as 
 "\texttt{\small{Citizen.state = CANVOTE()}}"), or created empty, immutable states at the top of the program. Several participants did not check whether a 
 citizen was unregistered before processing their application, meaning it would be possible for an already registered citizen to register again 
--- which is something we expressly prohibited in the instructions. 
+-- something we expressly prohibited in the instructions. 
 	
 When looking at and writing Obsidian code with states, participants asked a lot of questions about what should be allowed to happen 
-during and after a state transition -- that is, what variable are and are not in scope, what the keyword "this" refers to, and what transactions 
-can be used. Several participants asked if there was any way to check which state you are in currently. One participant noted that he felt it 
-should never be allowed to call transitions from one state while lexically in another, saying "I'm calling S1's transaction from code for Start."
-Another participant said that she felt that state transitions were like return statements, and once you make a transition there should not be 
-any more code in that transaction. 
+during and after a state transition -- that is, what variable are and are not in scope, what the keyword ``\texttt{\small{this}}" refers to, and what transactions 
+can be used. Several participants asked if there was any way to check which state the contract was in. One participant noted that he felt it 
+should never be allowed to call transitions from one state while lexically in another, saying ``I'm calling S1's transaction from code for Start.''
+Another participant said that she felt that state transitions were like return statements, and after completing a transition there should not be 
+any more code in that transaction.
 
 Three participants preferred the option that included state constructors, maintaining that this option was easier to understand. One preferred the option with \texttt{\small{if in \{state\}}} blocks because it made it immediately apparent which state a contract was in. The remaining three participants either did not express a preference or did not complete this part of the exercise. 
 
@@ -486,7 +482,7 @@ Three participants preferred the option that included state constructors, mainta
 	
 Six participants were given the lottery ticket exercise. When asked to implement the program using pseudocode, four out of the six defined 
 a class for Lottery. The instructions specified that users of the program should be able to buy a ticket from any lottery, but must only be 
-able to redeem a winning ticket from the lottery where they bought the ticket. Four out of the six implemented with program without 
+able to redeem a winning ticket from the lottery where they bought the ticket. Four out of the six implemented a program without 
 immediately recognizing or forming a solution to this problem. When the study facilitator pointed out the issue, the approach all four 
 participants took to resolve it was to give every lottery a fixed ID. They then made sure that the function that redeems a ticket must check 
 that the ticket's ID is equal to the lottery ID. 
@@ -512,36 +508,37 @@ The results of the pseudocode portions of both exercises indicate that states an
 natural ways of solving the problems we presented. This makes sense given the backgrounds of our participants: most of them noted that they 
 were writing pseudocode resembling the language they were most comfortable with, and thus may not have thought about inventing new, 
 unfamiliar language features. Moreover, the simplicity of both exercises -- the voter registration exercise in particular -- may have made the 
-need or these features somewhat opaque. Still, we found in many cases that the approaches participants did take to implementing the 
-programs was insufficient or unsafe, and the weaknesses in their programs could have been solved by using states or path-dependent 
-types. This result, coupled with our strong background evidence in the validity of these features, motivates us to continue developing these
+need or these features somewhat opaque. However, we found it encouraging that two participants independently invented special syntax denoting states, with appropriate scoping for fields and transactions. Further, we found in many cases that the approaches participants did take (reflecting approaches representative of commonly-used languages) to implementing the 
+programs were insufficient or unsafe, and the weaknesses in their programs could have been solved by using states or path-dependent 
+types. This result, coupled with our strong background evidence of the utility of these features, motivates us to continue developing these
 features in Obsidian, while further investigating the best ways to design, present, and evaluate them. 
 
-The results of the voter registration exercise indicate that a majority of participants prefer to write state transitions using state constructors. The 
+The results of the voter registration exercise indicate that a majority of participants prefer to specify code that executes after state transitions using state constructors. The 
 fact that participants preferred this option after a short coding exercise is not conclusive proof that this is the best option or the one we should 
-implement; however, it does indicate that Obsidian users want it to be simple and easy to tell which variables are in scope and determine the 
-current state of an object. Our results offer evidence that encapsulating all the actions of a state within that state will allow users to understand 
-clearly which state an object is currently in and which transactions and fields they are allowed to use -- thus enabling them to write better code. 
+implement; however, it does indicate that Obsidian users want it to be simple and easy to tell which variables and transactions are in scope and to lexically determine the 
+current state of an object. Our results offer evidence that encapsulating all the actions of a state within that state may allow users to understand 
+more easily which state an object is currently in and which transactions and fields they are allowed to use -- thus enabling them to write better code. 
 
 The responses we received from participants in the lottery ticket exercise reveal that nesting contracts is likely not the most understandable
 way to express a dependency relationship. Three participants made comments about this, and those who did not were not 
 able to identify path-dependent types correctly. An alternative to this approach would be to prohibit nesting and instead use a keyword
-to denote this relationship (e.g. \texttt{\small{"resource contract LotteryTicket of Lottery"}}).
+to denote this relationship (e.g. \texttt{\small{"resource contract LotteryTicket depends on Lottery"}}).
 
 \section{Future Work}
 
-In the future, we will continue to refine the language features, and test them with further user studies.\begin{itemize}
+We are continuing to refine the language features and test them with further user studies.
+\begin{itemize}
 \item We will target people in the business domain (e.g. business students and business analysts) with limited
 programming experience, in order to collect data from the intended user base of Obsidian.
 \item We will design programming exercises that further address the usability of linear resources. One question
 of interest, for example, is how to enforce linearity for field accesses and state transitions: what should happen
-when you attempt to access an owned field that has already been read once, and how can you transition
+when attempting to access an owned field that has already been consumed, and how can one transition
 between states with different owned fields? 
 \item We will design programming exercises that require participants to read and write longer, more complicated 
 Obsidian contracts that actually compile. This will offer us more evidence about whether people are able to write 
 correct Obsidian code. It will also allow participants to gain a deeper, less superficial understanding of Obsidian's 
 features and thus offer more constructive feedback about Obsidian's usability. 
-\item Finally, we will implement the Obsidian language using the results of these studies, 
+\item Finally, we plan to modify the Obsidian language implementation using the results of these studies, 
 and evaluate the final design in a formal study testing its effectiveness.
 \end{itemize}
 
@@ -570,35 +567,40 @@ contracts more safely and easily than currently available blockchain DSLs.
 %% Bibliography
 \begin{thebibliography}{9}
 \bibitem{Coblenz}
-	M. Coblenz, "Obsidian: A Safer Blockchain Programming Language," 
+	M. Coblenz, ``Obsidian: A Safer Blockchain Programming Language," 
 	in \emph{Proceedings of the 39th International Conference on Software Engineering -
 	ICSE '17,} 2017.
 \bibitem{Solidity}
-	"Solidity," https://solidity.readthedocs.io/en/develop/. Accessed Aug. 3, 2017.
+	Ethereum Foundation, ``Solidity," https://solidity.readthedocs.io/en/develop/. Accessed Aug. 3, 2017.
 \bibitem{Sirer}
-	E. G{\"u}n Sirer, "Thoughts on the DAO hack," 2016. [Online]. 
+	E. G{\"u}n Sirer, ``Thoughts on the DAO hack," 2016. [Online]. 
 	Available: http://hackingdistributed.com/2016/06/17/thoughts-on-the-dao-hack/
 \bibitem{Aldrich}
 	J. Aldrich, J. Sunshine, D. Saini, Z. Sparks,
-	"Typestate-Oriented Programming,"
+	``Typestate-Oriented Programming,"
 	in \emph{Proceedings of the 24th ACM SIGPLAN conference companion on Object oriented 
 	programming systems languages and applications,} 2009, pp. 1015-1022.
 \bibitem{Wadler}
-	P. Wadler, "Linear Types Can Change the World,"
+	P. Wadler, ``Linear Types Can Change the World,"
 	IFIP TC, vol. 2, pp. 347 - 359, 1990.
 \bibitem{Amin}
-	 N. Amin, T. Rompf, and M. Odersky. "Foundations of Path-Dependent Types." 
+	 N. Amin, T. Rompf, and M. Odersky. ``Foundations of Path-Dependent Types."
 	 in OOPSLA, 2014.
 \bibitem{Delmolino}
 	K. Delmolino, M. Arnett, A. E. Kosba, A. Miller, and E. Shi, 
-	"Step by step towards creating a safe smart contract: Lessons and insights from a cryptocurrency lab."
+	``Step by step towards creating a safe smart contract: Lessons and insights from a cryptocurrency lab."
 	IACR Cryptology ePrint Archive, vol. 2015, p. 460, 2015.
 \bibitem{Myers}
 	B. Myers, A. Ko, T. LaToza, and Y. Yoon, 
-	"Programmers Are Users Too: Human-Centered Methods for Improving Programming Tools," 
+	``Programmers Are Users Too: Human-Centered Methods for Improving Programming Tools,"
 	IEEE Computer, Special issue on UI Design, 49, issue 7, July, 2016, pp. 44-52.
+\bibitem{State}
+	Ethereum Foundation, ``Common patterns,''	http://solidity.readthedocs.io/en/develop/common-patterns.html.	Accessed Jan. 4, 2017.
+\bibitem{Rust}
+	N. D. Matsakis and F. S. Klock, II. 2014. ``The Rust language." Ada Lett. 34, 3 (October 2014), 103-104.
+\bibitem{Natural}
+	B.A. Myers, J.F. Pane, A. Ko, ``Natural Programming Languages and Environments", Comm. ACM, vol. 47, no. 9, pp. 47-52, 2004.	
 \end{thebibliography}
-	
 
 
 
