--- a/user_study_docs/obsidian-user-studies.tex
+++ b/user_study_docs/obsidian-user-studies.tex
@@ -93,46 +93,24 @@
 %% extraction tools.
 
 %% Author with single affiliation.
-\author{Celeste Barnaby}
-\affiliation{
-  \institution{Wesleyan University}            
-}
-\email{cbarnaby@wesleyan.edu}          
 
-\author{Michael Coblenz}
-\affiliation{
-  \institution{Carnegie Mellon University}            
-}
-\email{mcoblenz@cs.cmu.edu}          
 
-\author{Tyler Etzel}
+\author{Celeste Barnaby, Michael Coblenz, Tyler Etzel}
 \affiliation{
+  \institution{Wesleyan University}
+  \institution{Carnegie Mellon University}
   \institution{Cornell University}            
- }
-\email{tje44@cornell.edu} 
+}
+\email{cbarnaby@wesleyan.edu}
+\email{mcoblenz@cs.cmu.edu, tje44@cornell.edu}
 
-\author{Eliezer Kanal}
+\author{Eliezer Kanal, Joshua Sunshine, Brad Myers, Jonathan Aldrich}
 \affiliation{
   \institution{Carnegie Mellon University}            
 }
-\email{ekanal@cert.org}
+\email{ekanal@cert.org, sunshine@cs.cmu.edu,}
+\email{bam@cs.cmu.edu, jonathan.aldrich@cs.cmu.edu} 
 
-\author{Joshua Sunshine}
-\affiliation{
-  \institution{Carnegie Mellon University}            
-}
-\email{sunshine@cs.cmu.edu}
-
-\author{Brad Myers}
-\affiliation{
-  \institution{Carnegie Mellon University}            
-}
-\email{bam@cs.cmu.edu} 
-
-\author{Jonathan Aldrich}
-\affiliation{
-  \institution{Carnegie Mellon University}            }
-\email{jonathan.aldrich@cs.cmu.edu}   
 
 %% Paper note
 %% The \thanks command may be used to create a "paper note" ---
