Revised paper: reworked introduction, added code samples for other options for state transitions, and other misc changes

--- a/user_study_docs/obsidian-user-studies.tex
+++ b/user_study_docs/obsidian-user-studies.tex
@@ -93,24 +93,46 @@
 %% extraction tools.
 
 %% Author with single affiliation.
-
-
-\author{Celeste Barnaby, Michael Coblenz, Tyler Etzel}
+\author{Celeste Barnaby}
 \affiliation{
-  \institution{Wesleyan University}
-  \institution{Carnegie Mellon University}
-  \institution{Cornell University}            
+  \institution{Wesleyan University}            
 }
-\email{cbarnaby@wesleyan.edu}
-\email{mcoblenz@cs.cmu.edu, tje44@cornell.edu}
+\email{cbarnaby@wesleyan.edu}          
 
-\author{Eliezer Kanal, Joshua Sunshine, Brad Myers, Jonathan Aldrich}
+\author{Michael Coblenz}
 \affiliation{
   \institution{Carnegie Mellon University}            
 }
-\email{ekanal@cert.org, sunshine@cs.cmu.edu,}
-\email{bam@cs.cmu.edu, jonathan.aldrich@cs.cmu.edu} 
+\email{mcoblenz@cs.cmu.edu}          
 
+\author{Tyler Etzel}
+\affiliation{
+  \institution{Cornell University}            
+ }
+\email{tje44@cornell.edu} 
+
+\author{Eliezer Kanal}
+\affiliation{
+  \institution{Carnegie Mellon University}            
+}
+\email{ekanal@cert.org}
+
+\author{Joshua Sunshine}
+\affiliation{
+  \institution{Carnegie Mellon University}            
+}
+\email{sunshine@cs.cmu.edu}
+
+\author{Brad Myers}
+\affiliation{
+  \institution{Carnegie Mellon University}            
+}
+\email{bam@cs.cmu.edu} 
+
+\author{Jonathan Aldrich}
+\affiliation{
+  \institution{Carnegie Mellon University}            }
+\email{jonathan.aldrich@cs.cmu.edu}   
 
 %% Paper note
 %% The \thanks command may be used to create a "paper note" ---
